I OCDed the capitalization.

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Zapper is an experiment in mimicking Twitter using an Akka-based Event-Driven Architecture.
+Zapper is an experiment in mimicking Twitter using an Akka-based event-driven architecture.
